[tool.poetry]
name = "rtbhouse-sdk"
version = "9.0.0"
description = "RTB House SDK"
authors = ["RTB House Apps Team <apps@rtbhouse.com>"]
license = "BSD License"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
repository = "https://github.com/rtbhouse-apps/rtbhouse-python-sdk"

[tool.poetry.dependencies]
python = ">=3.7.2, <4.0"

pydantic = "^1.9.0"
httpx = "^0.23.0"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
respx = "^0.19.2"
pytest-asyncio = "^0.19.0"
mypy = "^0.961"
pylint = "^2.14.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.message_control]
enable = "all"
disable = """
    duplicate-code,
    invalid-name,
    locally-disabled,
    missing-class-docstring,
    missing-function-docstring,
    suppressed-message,
    use-implicit-booleaness-not-comparison
"""
extension-pkg-whitelist="pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
