[tool.poetry]
name = "rtbhouse-sdk"
version = "10.0.0"
description = "RTB House SDK"
authors = ["RTB House Apps Team <apps@rtbhouse.com>"]
license = "BSD License"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
repository = "https://github.com/rtbhouse-apps/rtbhouse-python-sdk"

[tool.poetry.dependencies]
python = ">=3.8.1, <4.0"

httpx = "^0.23.1"
pydantic = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^1.0"
pylint = "^2.14.4"
pytest = "^7.1.2"
pytest-asyncio = "^0.20.0"
pytest-cov = "^4.0.0"
respx = "^0.20.0"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
no_warn_unused_ignores = true
strict = true

[tool.pylint.main]
py-version = "3.8"
load-plugins = """
    pylint.extensions.check_elif,
    pylint.extensions.confusing_elif,
    pylint.extensions.consider_ternary_expression,
    pylint.extensions.empty_comment,
    pylint.extensions.eq_without_hash,
    pylint.extensions.for_any_all,
    pylint.extensions.redefined_loop_name,
    pylint.extensions.redefined_variable_type,
    pylint.extensions.set_membership,
    pylint.extensions.typing,
"""

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.message_control]
enable = "all"
disable = """
    duplicate-code,
    invalid-name,
    locally-disabled,
    missing-class-docstring,
    missing-function-docstring,
    suppressed-message,
    use-implicit-booleaness-not-comparison
"""
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
addopts = "--cov=rtbhouse_sdk/ --cov-report=term"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
