[tool.poetry]
name = "rtbhouse-sdk"
version = "14.0.0"
description = "RTB House SDK"
authors = ["RTB House Apps Team <apps@rtbhouse.com>"]
license = "BSD License"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
repository = "https://github.com/rtbhouse-apps/rtbhouse-python-sdk"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.9, <4.0"

httpx = "^0.27.0"
pydantic = ">=1.9, <3.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.0.0" # required for tests

black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.10.1"
mypy = "^1.0"
pylint = "^3.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
respx = "^0.21.0"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false
warn_untyped_fields = true

[tool.pylint.main]
py-version = "3.9"
load-plugins = """
    pylint.extensions.check_elif,
    pylint.extensions.confusing_elif,
    pylint.extensions.consider_ternary_expression,
    pylint.extensions.empty_comment,
    pylint.extensions.eq_without_hash,
    pylint.extensions.for_any_all,
    pylint.extensions.redefined_loop_name,
    pylint.extensions.redefined_variable_type,
    pylint.extensions.set_membership,
    pylint.extensions.typing,
"""

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.message_control]
enable = "all"
disable = """
    duplicate-code,
    invalid-name,
    locally-disabled,
    missing-class-docstring,
    missing-function-docstring,
    suppressed-message,
    too-many-positional-arguments,
    use-implicit-booleaness-not-comparison-to-zero,
    use-implicit-booleaness-not-comparison,
"""
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
addopts = "--cov=rtbhouse_sdk/ --cov-report=term"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
